<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="15dp"
        android:layout_gravity="center"
        tools:context="com.example.rob.socialmusic.MainScreen"
        android:background="@drawable/account_login_background"
        >

        <Button
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="35dp"

            android:layout_gravity="top"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:elevation="6dp"
            android:background="@drawable/main_screen_button"
            android:textColor="@color/TextBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:orientation="vertical">

                  <ImageButton
                      android:id="@+id/MainScreenSpotifyButton"
                      android:layout_width="75dp"
                      android:layout_height="75dp"
                      android:background="#00FFFFFF"
                      android:scaleType="fitXY"
                      android:src="@drawable/onboarding_spotify" />

                  <TextView
                      android:id="@+id/MainScreenSpotifyText"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/white"
                      android:layout_marginTop="10dp"
                      android:textAlignment="center"
                      android:layout_gravity="center"
                      android:text="@string/mainScreenSpotifyString"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical">

              <ImageButton
                  android:id="@+id/MainScreenGoogleMapsButton"
                  android:layout_width="75dp"
                  android:layout_height="75dp"
                  android:background="#00FFFFFF"
                  android:scaleType="fitXY"
                  android:src="@drawable/onboarding_googlemaps" />

              <TextView
                  android:id="@+id/MainScreenGoogleMapsText"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/white"
                  android:layout_gravity="center"
                  android:textAlignment="center"
                  android:layout_marginTop="10dp"
                  android:text="@string/mainScreenGoogleMapsString"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/MainScreenPersonalAccount"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="#00FFFFFF"
                    android:scaleType="fitXY"
                    android:src="@drawable/shelf_personal" />

                <TextView
                    android:id="@+id/MainScreenPersonalAccountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/mainScreenPersonalAccountString"/>

            </LinearLayout>

        </LinearLayout>

    <Button
        android:id="@+id/MainScreenLogOutButton"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:text="@string/logOutString"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:elevation="6dp"
        android:background="@drawable/main_screen_button"
        android:textColor="@color/TextBlack" />

    </LinearLayout>
